Closed Bug 1882900 Opened 4 months ago Closed 4 months ago

Fix build failures in widget/uikit

Categories

(Core :: Widget, defect)

defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.

This only really takes care of making it compile, although there are
still missing pieces for other directories to rely on it. This is enough
to unblock a bunch of other work.

Duplicate of this bug: 1834911
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/5e338e0f154d
Fix build failures in widget/uikit. r=nika
Status: NEW → RESOLVED
Closed: 4 months ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: