Bug 1882900 - Fix build failures in widget/uikit. r=nika

This only really takes care of making it compile, although there are
still missing pieces for other directories to rely on it. This is enough
to unblock a bunch of other work.

While here, remove `virtual` on methods with `override`.

Differential Revision: https://phabricator.services.mozilla.com/D203198